--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,7 +9,7 @@ sites:
     url: https://gtrr.artemislena.eu
   - name: BorgBackup
     check: "tcp-ping"
-    url: artemislena.eu
+    url: borg.artemislena.eu
     port: 22
   - name: Matrix (client)
     url: https://matrix.artemislena.eu
@@ -18,7 +18,7 @@ sites:
   - name: Whoareyou
     url: https://artemislena.eu/services/whoareyou.html
   - name: Plik
-    url: https://plik.artemislena.eu:8443
+    url: https://plik.artemislena.eu
   - name: Libreddit
     url: https://reddit.artemislena.eu
   - name: Invidious
