L: Forgot the port for Croc. Added.

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -40,6 +40,7 @@ sites:
   - name: Croc
     check: "tcp-ping"
     url: croc.artemislena.eu
+    port: 9009
   - name: Jitsi
     url: https://jitsi.artemislena.eu
 
