--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,7 +19,7 @@ sites:
     url: https://artemislena.eu/services/whoareyou.html
   - name: Plik
     url: https://plik.artemislena.eu
-  - name: Libreddit
+  - name: Teddit
     url: https://reddit.artemislena.eu
   - name: Invidious
     url: https://yt.artemislena.eu
