--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,7 +20,7 @@ sites:
   - name: Plik
     url: https://plik.artemislena.eu
   - name: Teddit
-    url: https://reddit.artemislena.eu
+    url: https://teddit.artemislena.eu
   - name: Invidious
     url: https://yt.artemislena.eu
   - name: Nitter
