T.: Since our Jitsi supports IPv4 now, can check that as well

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -45,6 +45,8 @@ sites:
     url: https://bw.artemislena.eu
   - name: Libreddit
     url: https://lr.artemislena.eu
+  - name: Jitsi
+    url: https://jitsi.artemislena.eu
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
